--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
         "@microsoft/signalr": "^6.0.4",
+        "@mui/material": "^5.8.3",
         "@reduxjs/toolkit": "^1.8.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
@@ -33,7 +36,7 @@
         "typescript": "^4.1.6"
     },
     "scripts": {
-    "start": "react-scripts start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
