--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
         "@microsoft/signalr": "^6.0.4",
+        "@mui/lab": "^5.0.0-alpha.85",
         "@mui/material": "^5.8.3",
         "@reduxjs/toolkit": "^1.8.1",
         "@testing-library/jest-dom": "^4.2.4",
@@ -24,6 +25,7 @@
         "filepond-plugin-image-preview": "^4.0.3",
         "moment": "^2.29.3",
         "notiflix": "^3.2.5",
+        "query-string": "^7.1.1",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-dropzone": "^14.2.0",
